Added action templates to describe state transition protocols

--- a/src/Primitives/QLearner/Makefile.inc
+++ b/src/Primitives/QLearner/Makefile.inc
@@ -4,6 +4,7 @@ TESTS   := $(TESTS)   $(LOWERC_ROOT)QLearnerTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/ *.cc
 $(UPPERC_ROOT)_QLEARNER_SRCS := $(LOWERC_ROOT)/QLearner/QTable.cc \
+                                $(LOWERC_ROOT)/QLearner/Action.cc \
                                 $(LOWERC_ROOT)/QLearner/StandardQLearner.cc
 $(UPPERC_ROOT)_QLEARNER_EXECUTABLES :=
 
