Started revising exploration policy and goal state determination method: Will now use postconditions as primary basis for checking if in a goal state. Implementing A* variant to handle path planning from start state to goal state. Added functions to allow for inclusion of many 'sanity check' functions that inform the system if a state is OK or not to pass through (e.g., don't go through someone's arm to get to the goal state)

--- a/src/Primitives/Exploration/Makefile.inc
+++ b/src/Primitives/Exploration/Makefile.inc
@@ -3,7 +3,8 @@ OBJDIRS := $(OBJDIRS) $(LOWERC_ROOT)/Exploration
 TESTS   := $(TESTS)   $(LOWERC_ROOT)ExplorationTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/ *.cC
-$(UPPERC_ROOT)_EXPLORATION_SRCS := $(LOWERC_ROOT)/Exploration/GreedyExplorer.cc
+$(UPPERC_ROOT)_EXPLORATION_SRCS := $(LOWERC_ROOT)/Exploration/GreedyExplorer.cc \
+				   $(LOWERC_ROOT)/Exploration/AStarExplorer.cc
 $(UPPERC_ROOT)_EXPLORATION_EXECUTABLES :=
 
 # Set makefile template specific vars
